# leadshine_motor_test

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
code/leadshine_motor_test/: __init__.py  canopen.py  cli.py  config.py  controller.py  drive.py  monitor.py  pdo.py  simulator.py  socketcan.py  telemetry.py
dev_logs/: development_log.md  todo.md
docs/: development_process.md  requirements.md  safety_guidelines.md  technical_design.md  version_control.md
tests/: test_cli.py  test_config.py
