[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leadshine-motor-test"
version = "0.1.0"
description = "CLI motor test tool for Leadshine LD2-CAN drives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
leadshine-motor-test = "leadshine_motor_test.cli:main"

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]
